# obdmonai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROGRESS.md  README.md  RUNBOOK.md  build-obdmonai.txt  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_tenant_tables_rls.py  0003_telemetry_hypertable.py  0004_continuous_aggregates.py  0005_auth_helper.py  0006_ingest_helpers.py  0007_alerts.py  0008_analytics.py  0009_ml_models.py  0010_superadmin.py  0011_geofence_vehicle.py
backend/app/: config.py  db.py  mailer.py  main.py  seed.py
backend/app/api/: alerts.py  analytics.py  auth.py  clients.py  devices.py  fleetview.py  geofences.py  reports.py  scores.py  simulator.py  vehicles.py
backend/app/fleetview/: __init__.py  (+3 more)
backend/tests/: conftest.py  test_phase10_smoke.py  test_phase11_firmware.py  test_phase2_db.py  test_phase3_auth.py  test_phase3_crud.py  test_phase3_isolation.py  test_phase4_ingest.py  test_phase5_rules.py  test_phase6_analytics.py  test_phase7_ml.py  test_phase8_fleetview.py
firmware/: README.md
firmware/obu-esp32/: platformio.ini
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.setup.ts
frontend/src/: App.tsx  index.css
infra/caddy/: Caddyfile
infra/mosquitto/: gen-certs.sh  mosquitto.conf
infra/pgbouncer/: pgbouncer.ini
(+68 files in other folders)
